--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <!-- Add your site or application content here -->
-      <p>Ann Coulter Info!</p>
+      <p>Ann Coulter Infoo!</p>
 
     </div>
     <!--[if lt IE 8]>
