change to text i like

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <!-- Add your site or application content here -->
-      <h1>Smelly poop!</h1>
+      <h1>Info about Ann Coulter!</h1>
 
     </div>
     <!--[if lt IE 8]>
