background is changed to black and button are made and some other things too

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
   </head>
   <body>
     <div class="container">
+      <div class="navbar">
+        <div class="navbar-button">info</div>
+        <div class="navbar-button">more info</div>
+        <div class="navbar-button">less info</div>
+      </div>
       <!-- Add your site or application content here -->
-      <h1>Info about Ann Coulter!</h1>
+      <h1 class="header-text">this site is full of info about ann coulter</h1>
 
     </div>
     <!--[if lt IE 8]>
