--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       </div>
       <!-- Add your site or application content here -->
       <h1 class="header-text">this site is full of info about ann coulter</h1>
-
+      <div class="video-container">
+        <img src="img/wavinganncoulterrough.gif">​
+      </div>
     </div>
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
